--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/pand.css">
 </head>
 <body>
+<section class="menu">
+	<ul>
+		<li><a href="#">Inicio</a></li>
+		<li><a href="#">Pandas</a></li>
+		<li><a href="#">Historia</a></li>
+		<li><a href="#">Extincion</a></li>
+	</ul>
+</section>
 <script type="text/javascript" src="assets/js/panda.js"></script>
 </body>
 </html>
