imagenes no listas

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 		<li><a href="#">Extincion</a></li>
 	</ul>
 </section>
+<div class="imagenes">
+			<img src="assets/image/a1.jpg" class="image">
+			<img src="assets/image/a2.jpg" class="image">
+			<img src="assets/image/a3.jpg" class="image">
+			<img src="assets/image/a4.jpg" class="image">
+		</div>
 <script type="text/javascript" src="assets/js/panda.js"></script>
 </body>
 </html>
